E1493: Fixing warnings generated by the browser tree Updated the browser tree to work with the new accuracy fields Added some padding to leave a gap between fields and values

--- a/trunk/app/webroot/css/style.css
+++ b/trunk/app/webroot/css/style.css
@@ -1852,6 +1852,9 @@ table.browserBubble th{
 	white-space: nowrap;
 	vertical-align: middle;	
 }
+table.browserBubble th, table.browserBubble td{
+	padding: 0 10px;	
+}
 
 span.button a{
 	text-decoration: none;
